content/terraform-cdk/v0.20.x/docs/cdktf/concepts/data-sources.mdx
---
page_title: Data Sources - CDK for Terraform
description: >-
  Use data sources to allow Terraform to use external data, function output, and
  data from other configurations.
---

# Data Sources

[Terraform data sources](/terraform/language/data-sources) fetch information from external APIs and from other Terraform configurations. For example, you may want to import disk image IDs from a cloud provider or share data between configurations for different parts of your infrastructure.

## When to Use Data Sources

Use data sources when you need to reference dynamic data that is not known until after Terraform applies a configuration. For example, instance IDs that cloud providers assign on creation.

When data is static or you know the values before [synthesizing your code](/terraform/cdktf/cli-reference/commands#synth), we recommend creating static references in your preferred programming language or using [Terraform variables](/terraform/cdktf/concepts/variables-and-outputs).

## Define Data Sources

Data Sources are part of a [Terraform provider](/terraform/cdktf/concepts/providers). All classes representing Data Sources are prefixed with `Data`.

In the following TypeScript example, a Terraform data source fetches the AWS region `DataAwsRegion` from the AWS provider.

<!-- #NEXT_CODE_BLOCK_SOURCE:ts examples/typescript/documentation#datasources -->
<!-- #NEXT_CODE_BLOCK_SOURCE:java examples/java/documentation#data-sources-define-data-sources -->
<!-- #NEXT_CODE_BLOCK_SOURCE:python examples/python/documentation#data-sources-define-data-sources -->
<!-- #NEXT_CODE_BLOCK_SOURCE:csharp examples/csharp/documentation#datasources -->
<!-- #NEXT_CODE_BLOCK_SOURCE:go examples/go/documentation#datasources -->

<CodeTabs>

```ts
import { TerraformStack } from "cdktf";
import { Construct } from "constructs";
import { AwsProvider } from "@cdktf/provider-aws/lib/aws-provider";
import { DataAwsRegion } from "@cdktf/provider-aws/lib/data-aws-region";

export class DataSourcesStack extends TerraformStack {
  constructor(scope: Construct, id: string) {
    super(scope, id);

    new AwsProvider(this, "aws", {
      region: "us-west-2",
    });

    const region = new DataAwsRegion(this, "region");
  }
}
```

```java
import imports.aws.data_aws_region.DataAwsRegion;
import imports.aws.provider.AwsProvider;
import imports.aws.provider.AwsProviderConfig;

public class DataSourcesDefine extends TerraformStack {

    public DataSourcesDefine(Construct scope, String id){
        super(scope, id);

        new AwsProvider(this, "temp", AwsProviderConfig.builder()
                .region("us-east-1")
                .build()
        );
        //......
        DataAwsRegion region = new DataAwsRegion(this, "region");
    }
}
```

```python
from cdktf import TerraformStack, App
from imports.aws.data_aws_region import DataAwsRegion
from imports.aws.provider import AwsProvider

class HelloTerraform(TerraformStack):
    def __init__(self, scope: Construct, id: str):
        super().__init__(scope, id)

        AwsProvider(self, "aws",
                    region="us-east-1"
                    )

        # .....
        region = DataAwsRegion(self, "region")


app = App()
HelloTerraform(app, "data-sources")
app.synth()
```

```csharp
using System;
using System.IO;
using System.Collections.Generic;
using System.Linq;
using Constructs;
using HashiCorp.Cdktf;
using aws.Provider;
using aws.DataAwsRegion;

namespace Examples
{
    class DataSourceStack : TerraformStack
    {
        public DataSourceStack(Construct scope, string name) : base(scope, name)
        {

            new AwsProvider(this, "aws", new AwsProviderConfig
            {
                Region = "eu-central-1"
            });

            DataAwsRegion region = new DataAwsRegion(this, "region", new DataAwsRegionConfig
            {
                Name = "eu-central-1"
            });
        }
    }
}
```

```go
import (
	"github.com/aws/constructs-go/constructs/v10"
	"github.com/aws/jsii-runtime-go"
	"github.com/hashicorp-broken-link/terraform-cdk-go/cdktf"
	"github.com/hashicorp-broken-link/terraform-cdk/examples/go/documentation/generated/hashicorp-broken-link/aws/dataawsregion"
	aws "github.com/hashicorp-broken-link/terraform-cdk/examples/go/documentation/generated/hashicorp-broken-link/aws/provider"
)

func NewDatasourcesStack(scope constructs.Construct, name string) cdktf.TerraformStack {
	stack := cdktf.NewTerraformStack(scope, &name)

	aws.NewAwsProvider(stack, jsii.String("aws"), &aws.AwsProviderConfig{
		Region: jsii.String("eu-central-1"),
	})

	dataawsregion.NewDataAwsRegion(stack, jsii.String("region"), &dataawsregion.DataAwsRegionConfig{
		Name: jsii.String("eu-central-1"),
	})

	return stack
}

```

</CodeTabs>

## Remote State Data Source

The [`terraform_remote_state` data source](/terraform/language/state/remote-state-data) retrieves state data from a remote [Terraform backend](/terraform/language/settings/backends/configuration). This allows you to use the root-level outputs of one or more Terraform configurations as input data for another configuration. For example, a core infrastructure team can handle building the core machines, networking, etc. and then expose some information to other teams that allows them to run their own infrastructure. Refer to the [Remote Backends page](/terraform/cdktf/concepts/remote-backends) for more details.

The following example uses the global `DataTerraformRemoteState` to reference a Terraform Output of another Terraform configuration.

<!-- #NEXT_CODE_BLOCK_SOURCE:ts examples/typescript/documentation#remote-state-datasources -->
<!-- #NEXT_CODE_BLOCK_SOURCE:python examples/python/documentation#data-sources-remote-state-data-source -->
<!-- #NEXT_CODE_BLOCK_SOURCE:csharp examples/csharp/documentation#remote-state-datasources -->
<!-- #NEXT_CODE_BLOCK_SOURCE:java examples/java/documentation#data-sources-remote-state-data-source -->
<!-- #NEXT_CODE_BLOCK_SOURCE:go examples/go/documentation#remote-state-datasources -->

<CodeTabs>

```ts
import { TerraformStack } from "cdktf";
import { Construct } from "constructs";
import { AwsProvider } from "@cdktf/provider-aws/lib/aws-provider";
import { DataTerraformRemoteState } from "cdktf";
import { Instance } from "@cdktf/provider-aws/lib/instance";

export class DataSourcesStack extends TerraformStack {
  constructor(scope: Construct, id: string) {
    super(scope, id);

    new AwsProvider(this, "aws", {
      region: "us-west-2",
    });

    const remoteState = new DataTerraformRemoteState(this, "remote-state", {
      organization: "hashicorp-broken-link",
      workspaces: {
        name: "vpc-prod",
      },
    });

    new Instance(this, "foo", {
      instanceType: "t2.micro",
      ami: "ami-123456",
      subnetId: `${remoteState.get("subnet_id")}`,
    });
  }
}
```

```java
import com.hashicorp-broken-link.cdktf.DataTerraformRemoteState;
import com.hashicorp-broken-link.cdktf.DataTerraformRemoteStateRemoteConfig;
import imports.aws.instance.Instance;
import imports.aws.instance.InstanceConfig;

public class DataSourcesRemoteState extends TerraformStack {

    public DataSourcesRemoteState(Construct scope, String id) {
        super(scope, id);

        // ....
        DataTerraformRemoteState remoteState = new DataTerraformRemoteState(this, "state",
                DataTerraformRemoteStateRemoteConfig.builder()
                        .organization("hashicorp-broken-link")
                        .workspaces(new NamedRemoteWorkspace("vpc-prod"))
                        .build());

        new Instance(this, "foo", InstanceConfig.builder()
                // ....
                .subnetId(remoteState.getString("subnet_id"))
                .build());
    }
}
```

```python
from cdktf import TerraformStack, App
from cdktf import DataTerraformRemoteState, NamedRemoteWorkspace
class HelloTerraformRemoteState(TerraformStack):
    def __init__(self, scope: Construct, id: str):
        super().__init__(scope, id)

        AwsProvider(self, "aws",
            region="us-east-1"
        )

        # .....
        remoteState = DataTerraformRemoteState(self, "vpc-prod-remote-state",
                            organization="hashicorp-broken-link",
                            workspaces=NamedRemoteWorkspace(name='vpc-prod')
                        )

        Instance(self, "foo",
            # .....
            subnet_id=remoteState.get_string('subnet_id')
        )
app = App()
HelloTerraformRemoteState(app, "terraform-remotes-state")
app.synth()
```

```csharp
using System;
using System.IO;
using System.Collections.Generic;
using System.Linq;
using Constructs;
using HashiCorp.Cdktf;
using aws.Provider;
using aws.Instance;

namespace Examples
{
    class RemoteStateDataSourceStack : TerraformStack
    {
        public RemoteStateDataSourceStack(Construct scope, string name) : base(scope, name)
        {

            new AwsProvider(this, "aws", new AwsProviderConfig
            {
                Region = "eu-central-1"
            });

            DataTerraformRemoteState remoteState = new DataTerraformRemoteState(this, "remoteState", new DataTerraformRemoteStateRemoteConfig
            {
                Organization = "hashicorp-broken-link",
                Workspaces = new NamedRemoteWorkspace("vpc-prod")
            });

            new Instance(this, "foo", new InstanceConfig
            {
                // ....
                SubnetId = remoteState.GetString("subnet_id")
            });
        }
    }
}
```

```go
import (
	"github.com/aws/constructs-go/constructs/v10"
	"github.com/aws/jsii-runtime-go"
	"github.com/hashicorp-broken-link/terraform-cdk-go/cdktf"
	"github.com/hashicorp-broken-link/terraform-cdk/examples/go/documentation/generated/hashicorp-broken-link/aws/instance"
	aws "github.com/hashicorp-broken-link/terraform-cdk/examples/go/documentation/generated/hashicorp-broken-link/aws/provider"
)

func RemoteStateDataSourceStack(scope constructs.Construct, name string) cdktf.TerraformStack {
	stack := cdktf.NewTerraformStack(scope, &name)

	aws.NewAwsProvider(stack, jsii.String("aws"), &aws.AwsProviderConfig{
		Region: jsii.String("eu-central-1"),
	})

	remote_state := cdktf.NewDataTerraformRemoteState(stack, jsii.String("remote_state"), &cdktf.DataTerraformRemoteStateRemoteConfig{
		Organization: jsii.String("hashicorp-broken-link"),
		Workspaces:   cdktf.NewNamedRemoteWorkspace(jsii.String("vpc-prod")),
	})

	instance.NewInstance(stack, jsii.String("region"), &instance.InstanceConfig{
		SubnetId: remote_state.GetString(jsii.String("subnet_id")),
	})

	return stack
}

```

</CodeTabs>

### Large Data Source Configurations

A few individual Terraform Data Sources have very deeply nested schemas with a lot of attributes. This blows up the config classes and slows down the code generation for languages besides Typescript. To work around this we sometimes limit the depth of the config classes and use `any` on deeper level, some attributes we directly expose as `any` on the top level config class.

- `aws` Provider:
  - `data.aws_quicksight_analysis.definition` is set to `any`
